versions/v2.2.1/README_HE.md
# ספר הטיולים של אילן — גרסה 2.2.1

זוהי תיקיית הפרסום המבוקרת של גרסה 2.2.1. האתר בנוי כ־PWA בעברית וב־RTL ומתאים להפעלה מקומית או לפרסום ב־GitHub Pages. גרסה זו מתמקדת באמינות מסלולי הכביש; שירות AI אינו חלק משער השחרור.

## מצב הקטלוג בגרסה 2.2.1

- כל 143 רשומות המסלול נסרקו בנפרד: 90 מסלולי מקור ו־53 מועמדי מחקר.
- 45 מסלולי מקור נכללים בקטלוג הפעיל לאחר בדיקות נתונים, רצף ניווט, Google Maps, מקורות ותצוגה.
- 45 מסלולי מקור נשמרו בקבצים אך הועברו להסגר עם סיבה מפורשת. הם אינם מוצגים כהצעת רכיבה.
- כל 53 מועמדי המחקר נשמרו ב־`data/new-routes-v2.js`, אך אינם מפורסמים עד להשלמת מרחק, זמן, כבישים, תדלוק, תוכן ובדיקת דרך.
- בקטלוג הפעיל יש 240 תחנות ו־99 כתובות מקור ייחודיות.
- צילום מלא של גרסה 2.2.0 נשמר תחת `versions/v2.2.0/`; חומר המקור לא נדרס ולא נמחק.

דוח JSON ודוח קריא לאדם נשמרים תחת `reports/` ומציגים תוצאה לכל אחת מ־143 הרשומות.

## מה נבדק

- שדות החובה, מרחק, זמן, רמה, עונה, כבישים, תדלוק, אזהרות, תחנות ופרופיל כביש.
- רצף נקודות הניווט, התחלה וסיום, מסלול מעגלי לעומת נקודה־לנקודה, מגבלת נקודות ואורך URL.
- פתיחה בפועל של מפות Google, זיהוי גאוקוד שגוי, חציית גבולות, כבישי אגרה, דרכים פרטיות או מוגבלות ומסלולים חלקיים.
- תקינות כתובות המקור והתאמתן למסלול, כולל סגירות, דרכי עפר, מגבלות גישה ותיאום מראש.
- כל כרטיסי המסלול וחלונות הפרטים, מפות מוטמעות, מובייל RTL, מצב כהה והיעדר גלילה או קטיעה אופקית.
- ייצוא מסלול ל־HTML, יצירת הזמנה, נקודות מפגש, שילוב מסלולים, מסלולי המשך ומונה כניסות מקומי.
- manifest, סמלי האפליקציה, Service Worker, מטמון, מצב offline ונתיבי משנה של GitHub Pages.

## תכונות פעילות

- מפה עצלה בכל כרטיס וקישור מלא ל־Google Maps; קישורי Waze ניתנים רק לנקודות חד־משמעיות.
- סינון לפי אזור, רמת רכיבה, אופי כביש, סוג טיול ורמת אימות.
- Dark Mode לפי המערכת ובבחירה ידנית.
- מרכז בטיחות למוביל, מאסף ומרשלים, רכיבה מדורגת, מרחקים, מיגון ואחריות אישית.
- כתב ויתור, הודעת שימוש ראשון ואיסור שימוש באתר בזמן רכיבה.
- שמירת מסלולים מקומית, ייצוא HTML, הזמנות ו־WhatsApp, ובונה טיול משולב.
- נקודת מפגש במרכז ונקודת הצטרפות שנייה עם שעות משוערות ועריכה ידנית.
- מונה מקומי גלוי הסופר כניסה אחת לכל הפעלת דפדפן. אין מונה גלובלי ללא שירות שרת.
- הקראה מקומית בעברית באמצעות מנגנון הדיבור של המכשיר.

## עוזר המסלול ו־AI

עוזר המסלול המקומי מציג רק מידע שכבר נמצא בספר. שירות AI בענן נשאר אופציונלי, כבוי ולא פרוס; הוא אינו נדרש להפעלת האתר ואינו חלק מביקורת גרסה 2.2.1. אסור להכניס `OPENAI_API_KEY` ל־HTML, ל־JavaScript, ל־GitHub Pages או למאגר.

## הפעלה מקומית והתקנה בכרום

הפעילו את `הפעלה_מקומית_בכרום.cmd`. הקובץ מפעיל שרת מקומי בכתובת `http://localhost:4173/` ופותח את Chrome.

פתיחה ישירה של `index.html` ב־`file://` מציגה תוכן, אך התקנת PWA ו־Service Worker דורשות `localhost` או HTTPS. כפתור **התקנת האפליקציה** מוצג לאחר ש־Chrome מחזיר אירוע התקנה; אפשר להתקין גם מתפריט Chrome.

## בדיקות מקומיות

מתוך התיקייה:

```powershell
node --check assets\app-v2.js
node --check data\release-audit-v2.js
node --check sw.js
node --check tools\audit-release-routes.mjs
node --test tests\validate-v2.mjs
node tools\audit-release-routes.mjs --network --write
```

הפקודה האחרונה מריצה מחדש את ביקורת הרשת וכותבת את דוחות השחרור. אין לפרסם אם אחת מן הבדיקות נכשלת.

## גרסאות ושמירת היסטוריה

- הגרסה הנוכחית והיחידה המוצגת באתר: **2.2.1**.
- גרסה 2.2.0 נשמרת במלואה תחת `versions/v2.2.0/`.
- גרסה 2.1.2 נשמרת תחת `versions/v2.1.2/`.
- גרסה 2.0.3 נשמרת תחת `versions/v2.0.3/`.
- גרסה 1.1.1 נשמרת תחת `versions/v1.1.1/`.
- `book.html` נשמר כקובץ המקור של גרסה 1 ואינו נדרס.
- בכל שינוי עתידי יש להעלות את המספר הגלוי ולסנכרן גם את גרסת ה־manifest ואת גרסת המטמון ב־`sw.js`.

## גבולות האימות

- ביקורת השחרור מאשרת את מצב הקבצים, הקישורים והמקורות במועד 09.08.2026. כביש, אתר, מזג אוויר או הוראת ביטחון יכולים להשתנות לאחר מכן.
- מפות, Waze וקישורים חיצוניים דורשים חיבור לאינטרנט.
- המקורות משויכים ברמת המסלול; אין עדיין ציטוט נפרד לכל משפט בסיפור הדרך.
- אין מאגר תמונות בעל רישיון וקרדיט לכל מסלול; תצוגת Google Maps משמשת כהמחשה חיה בלי להעתיק תמונות מוגנות.
- `robots.txt` ו־`noindex` מצמצמים גילוי במנועי חיפוש אך אינם הגנת סיסמה. כל מי שמקבל את הקישור יכול לפתוח ולהעביר אותו.
